Add list of internal note

--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -111,7 +111,7 @@
 \begin{tightemize}
 \item Particle classification. Increasing the real lepton identification efficiency from 80\% to 98\%.
 \item Wrote data filtration algorithms in C++ reducing the data size by a factor of 100.
-\item Developed a new framework to increase the performance. Reducing the run time from one week to 5 hours.
+\item Developed a new framework to improve the performance. Reducing the run time from one week to 5 hours.
 \end{tightemize}
 \sectionsep
 
@@ -156,10 +156,10 @@
 % % The various analysis methods such as Monte Carlo simulation, event selection and reconstruction (data mining \& EDA), background suppression (feature processing \& feature engineering) are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
 % \item Developed a new object-oriented programming framework in C++ increasing the performance and accuracy of the real lepton efficiency measurement.
 % The new framework processes datasets 10 times larger than the previous one, automates analysis procedures reducing a week manual operations to 5 hours, and increases the efficiency to 98\%.
-% \item Co-developed and maintained the C++ based Tag-and-probe framework.
+% \item Co-developed and maintained the C++ based Tag-and-probe framework for E/gamma combine performance group.
 % % \item Analyzed large proton-proton collision data collected with the ATLAS detector complex using C++ and Python and automated the visualization of results.
 % % \item Used C++ and Python with PyROOT to perform data analysis and automate the visualization of results.
-% \item Took shift in the ATLAS control room (ACR) to monitor the ATLAS inner detector operation.
+% \item Took shifts in the ATLAS control room (ACR) to monitor the ATLAS inner detector operation.
 \end{tightemize}
 \sectionsep
 
@@ -220,8 +220,9 @@
 % \item Advisor: Patrick Skubic
 % \item Dissertation: Search for electroweak production of supersymmetric states in non-universal higgs mass model with two extra parameters compressed scenario with the ATLAS detector\\
 %       \href{https://hdl.handle.net/11244/299774}{\color{link}{Dissertation link}}
-% FOR RESUME & CV
-\item Published 4 top journal papers and 6 conference notes, and presented in 2 conferences.
+% \item Published 4 journal papers and 5 conference notes, 18 internal notes, and presented in 2 conferences.
+% FOR RESUME
+\item Published 4 top journal papers and 5 conference notes, and presented in 2 conferences.
 \end{tightemize}
 \sectionsep
 
@@ -285,8 +286,6 @@
 % \begin{tightemize}
 % \item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
 %       link: \href{https://cds.cern.ch/record/2261952}{ATLAS-COM-CONF-2017-041}
-% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2196580}{ATL-COM-PHYS-2016-865}
 % \item Search for scalar diphoton resonances with 15.4 fb$^{-1}$ of data collected at $\sqrt{s} = 13$ TeV in 2015 and 2016 with the ATLAS detector\\
 %       link: \href{https://cds.cern.ch/record/2199338}{ATLAS-COM-CONF-2016-056}
 % \item Electron efficiency measurements with the ATLAS detector using the 2015 LHC proton-proton collision data\\
@@ -299,6 +298,47 @@
 % \end{tightemize}
 % \sectionsep
 
+% \runsubsection{Internal notes:}
+% \location{}
+% \begin{tightemize}
+% \item SUSY searches for electroweak production with compressed mass spectra at ATLAS\\
+%       link: \href{https://cds.cern.ch/record/2631591}{ATL-COM-PHYS-2018-1073}
+% \item Search for weak production of compressed supersymmetry with two soft leptons and missing transverse momentum in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2284973}{ATL-COM-PHYS-2017-1440}
+% \item Support note for electron ID: electron isolation\\
+%       link: \href{https://cds.cern.ch/record/2274466}{ATL-COM-PHYS-2017-1043}
+% \item Overview of the methods used to estimate the fake lepton background in the SUSY group\\
+%       link: \href{https://cds.cern.ch/record/2261709}{ATL-COM-PHYS-2017-469}
+% \item ATLAS electron, photon and muon isolation in Run 2\\
+%       link: \href{https://cds.cern.ch/record/2256658}{ATL-COM-PHYS-2017-290}
+% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using $\sqrt{s} = 13$ TeV $pp$ collision data collected with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2252643}{ATL-COM-PHYS-2017-149}
+% \item Searches for weak production of compressed supersymmetry in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2235272}{ATL-COM-PHYS-2016-1708}
+% \item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collision data at $\sqrt{s} = 13$ TeV (Supporting note for Moriond 2017)\\
+%       link: \href{https://cds.cern.ch/record/2231789}{ATL-COM-PHYS-2016-1616}
+% \item Measurement of electron isolation efficiencies and scale factors with early Run-2 data\\
+%       link: \href{https://cds.cern.ch/record/2209586}{ATL-COM-PHYS-2016-1181}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2196580}{ATL-COM-PHYS-2016-865}
+% \item Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV: Isolation studies\\
+%       link: \href{https://cds.cern.ch/record/2162758}{ATL-COM-PHYS-2016-760}
+% \item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collisions data at $\sqrt{s} = 13$ TeV (Supporting note)\\
+%       link: \href{https://cds.cern.ch/record/2151944}{ATL-COM-PHYS-2016-495}
+% \item Isolation studies : Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
+%       link: \href{https://cds.cern.ch/record/2136940}{ATL-COM-PHYS-2016-216}
+% \item Supporting document on electron identification and efficiency measurements using the 2015 LHC proton-proton collision data\\
+%       link: \href{https://cds.cern.ch/record/2125283}{ATL-COM-PHYS-2016-041}
+% \item Electron isolation efficiencies with 2015 data\\
+%       link: \href{https://cds.cern.ch/record/2112167}{ATL-COM-PHYS-2015-1486}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2102919}{ATL-COM-PHYS-2015-1382}
+% \item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets in $pp$ collisions at $\sqrt{s} = 13$ TeV (Supporting note)\\
+%       link: \href{https://cds.cern.ch/record/2052581}{ATL-COM-PHYS-2015-1150}
+% \item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets: preparing for 2015 analyses\\
+%       link: \href{https://cds.cern.ch/record/2012029}{ATL-COM-PHYS-2015-329}
+% \end{tightemize}
+% \sectionsep
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
