--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -49,34 +49,48 @@
 \section{Skills}
 
 \raggedright{
+    Programming Language:
     C/C++
     \textbullet{}
     Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn)
     \textbullet{}
-    BASH shell script
+    BASH shell script\\
+    % \textbullet{}
+    Machine Learning:
+    supervised (kNN, linear/logistic regression, decision tree, SVM)
     \textbullet{}
+    unsupervised (k-Means)\\
+    % \textbullet{}
+    Statistics:
+    LSE
+    \textbullet{}
+    MLE
+    \textbullet{}
+    Hypothesis test
+    \textbullet{}
+    A/B test
+    \textbullet{}
+    bootstrapping\\
+    % \textbullet{}
     % VBA
     % \textbullet{}
     % Git/SVN
     % \textbullet{}
-    Git
-    \textbullet{}
+    Version Control:
+    Git\\
+    % \textbullet{}
+    Database:
     SQL
-    \textbullet{}
-    supervised learning (kNN, linear/logistic regression, decision tree, SVM)
-    \textbullet{}
-    unsupervised learning (k-Means)
-    \textbullet{} 
+    % \textbullet{}
     % Mac OS/Linux
     % \textbullet{}
     % Microsoft Office/Apple Keynote/Pages
     % \textbullet{}
     % HTML \textbullet{}
-    \LaTeX\
-    \textbullet{}
+    % \LaTeX\
+    % \textbullet{}
     % Vim \textbullet{}
     % ROOT framework \textbullet{} 
-    Statistics (probability, LSE, MLE, Hypothesis test, A/B test, bootstrapping)
     % \textbullet{}
     % Data analysis (detail)
     % \textbullet{}
@@ -105,13 +119,13 @@
 % \end{tightemize}
 % \sectionsep
 
-\runsubsection{Real lepton efficiency}
+\runsubsection{Real Lepton Efficiency}
 % \descript{}
 \location{}
 \begin{tightemize}
-\item Particle classification. Increasing the real lepton identification efficiency from 80\% to 98\%.
-\item Wrote data filtration algorithms in C++ reducing the data size by a factor of 100.
-\item Developed a new framework to improve the performance. Reducing the run time from one week to 5 hours.
+\item Classified particles to improve the real lepton identification efficiency from 80\% to 98\%.
+\item Designed data filtration algorithms in C++ reducing the data size by a factor of 100.
+\item Developed a new framework to reduce the run time from one week manual operations to 5 hours automation.
 \end{tightemize}
 \sectionsep
 
@@ -128,7 +142,7 @@
 % FOR RESUME & CV
 \item 6 semesters teaching assistant for college and graduate level courses.
 % \item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
-\item Stationed at CERN and dedicated to search for supersymmertic particles since 2015.
+% \item Stationed at CERN and dedicated to search for supersymmertic particles since 2015.
 % \item Relocated to CERN since 2015. Analyzed large experimental datasets to search for supersymmertic particles among other duties.
 \end{tightemize}
 \sectionsep
@@ -138,11 +152,13 @@
 \location{2015 - 2018 | Geneva, Switzerland}
 \begin{tightemize}
 % FOR RESUME
-\item Calibrated the electron isolation efficiency by analyzing 30M+ events. The results became a central released version of the ATLAS collaboration.
-\item Mined data from Grid and wrote data filtering algorithm to reduce the data size from $\sim$400 TB to less than 200 GB and signficantly speed up processing time of data analysis.
+\item Calibrated the electron isolation efficiency by analyzing 30M+ events and became the standard version of the collaboration. %The results became a central released version of the collaboration.
+% \item Mined and cleaned data from the distributed LHC computing Grid over 170 computing centers in 42 countries using Rucio.
+\item Mined and cleaned data from the distributed LHC computing Grid using Rucio.
+% \item Mined data from Grid and wrote data filtering algorithm to reduce the data size from $\sim$400 TB to less than 200 GB and signficantly speed up processing time of data analysis.
 % \item Analyzed large datasets with 400+ variables per file and $\sim$30M entries in total using methods including Monte Carlo simulation, event selection and reconstruction, background suppression etc. (i.e. EDA, feature processing, and feature engineering). 
 % Applied muti-dimensional least Chi-square fit to extract signal events, performed statistical interpretations to validate model or rule out the model parameter space (i.e. model fitting and statistics hypothesis test).
-\item Analyzed large datasets with 400+ variables per file and $\sim$30M entries in total by performing EDA, feature processing and engineering, LSE and MLE model fitting, and statistics hypothesis test.
+\item Analyzed $\sim$200 GB large datasets with 400+ variables per file and $\sim$30M entries in total by performing EDA, feature processing and engineering, LSE and MLE model fitting, and statistics hypothesis test.
 
 
 % FOR CV
@@ -188,7 +204,7 @@
 \location{2006 - 2009 | Hsinchu, Taiwan}
 \begin{tightemize}
 % FOR RESUME
-\item Model data collection automation, parameterization, accuracy and completeness validation, documentation, and customer support.
+\item Model data collection automation, parameterization, validation, documentation, and customer support.
 
 % FOR CV
 % \item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model electrical characteristic parameterization, model accuracy validation, model documentation, and customer support.
