Add research statement

--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -26,7 +26,8 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\CompanyName}{Company}
-\newcommand{\CompanyAddress}{City, State}
+% \newcommand{\CompanyAddress}{City, State}
+\newcommand{\CompanyAddress}{San Francisco, CA}
 \newcommand{\JobPositionName}{Data Scientist}
 \newcommand{\ManagerName}{Madam or Sir to whom it may concern}
 
@@ -107,12 +108,12 @@
 %(USE A SENTENCE TO DESCRIBE THE REASON WHY APPLYING FOR THIS POSITION AT HERE.)
 % I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
 I am applying for the position of \JobPositionName{} in \CompanyName{}.
-I started to analyze data since I enrolled in my Ph.D program in high energy physics and prepared myself to work with data by learning necessary knowledge and skills.
+I started to analyze big data since I enrolled in my Ph.D program in high energy physics and prepared myself to work with big data by learning necessary knowledge and skills.
 
 
 % Considering the differences between academia and industry, I took several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera to become familiar with the knowledge and tools commonly used in the industry.
 % I have taken several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera.
-I have taken several data analysis and machine learning online courses.
+I have taken several data analysis and machine learning online courses and bootcamp.
 % I believe these courses can help me to switch from academia to the industry smoothly.
 The skills such as querying data using SQL, manipulating and cleaning data using Pandas, visualizing results using Matplotlib and Seaborn, and machine learning using scikit-learn and Keras are in my toolbox now.
 Several projects are done while taking courses.
